--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+  background-color: #654872;
+
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+
+.margem {
+  background: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  padding: 10px;
+
+}
+
+h1 {
+  text-align: center;
+}
